force-app/main/default/objects/Lead/fields/Aantal_Vloerkleden_3m__c.field-meta.xml
<CustomField>
    <fullName>Aantal_Vloerkleden_3m__c</fullName>
    <label>Aantal Vloerkleden &gt;=3m²</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>