force-app/main/default/objects/Lead/fields/Actual_products__c.field-meta.xml
<CustomField>
    <fullName>Actual_products__c</fullName>
    <label>Actual products</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>