force-app/main/default/objects/Lead/fields/Adres_Toevoeging__c.field-meta.xml
<CustomField>
    <fullName>Adres_Toevoeging__c</fullName>
    <label>Adres Toevoeging</label>
    <length>10</length>
    <type>Text</type>
</CustomField>