force-app/main/default/objects/Lead/fields/Afleveradres_Toevoeging__c.field-meta.xml
<CustomField>
    <fullName>Afleveradres_Toevoeging__c</fullName>
    <label>Afleveradres Toevoeging</label>
    <length>10</length>
    <type>Text</type>
</CustomField>