force-app/main/default/objects/Lead/fields/Afleverplaats__c.field-meta.xml
<CustomField>
    <fullName>Afleverplaats__c</fullName>
    <label>Afleverplaats</label>
    <length>255</length>
    <type>Text</type>
</CustomField>