force-app/main/default/objects/Lead/fields/Afleverpostcode__c.field-meta.xml
<CustomField>
    <fullName>Afleverpostcode__c</fullName>
    <label>Afleverpostcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>