force-app/main/default/objects/Lead/fields/Afleverstraat__c.field-meta.xml
<CustomField>
    <fullName>Afleverstraat__c</fullName>
    <label>Afleverstraat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>