force-app/main/default/objects/Lead/fields/Ander_afleveradres__c.field-meta.xml
<CustomField>
    <fullName>Ander_afleveradres__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ander afleveradres</label>
    <type>Checkbox</type>
</CustomField>