force-app/main/default/objects/Lead/fields/Automatisch_aangemaakt__c.field-meta.xml
<CustomField>
    <fullName>Automatisch_aangemaakt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatisch aangemaakt</label>
    <type>Checkbox</type>
</CustomField>