force-app/main/default/objects/Lead/fields/Automatisch_geconverteerd__c.field-meta.xml
<CustomField>
    <fullName>Automatisch_geconverteerd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatisch geconverteerd</label>
    <type>Checkbox</type>
</CustomField>