force-app/main/default/objects/Lead/fields/Beantwoord__c.field-meta.xml
<CustomField>
    <fullName>Beantwoord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beantwoord?</label>
    <type>Checkbox</type>
</CustomField>