force-app/main/default/objects/Lead/fields/Betalingswijze__c.field-meta.xml
<CustomField>
    <fullName>Betalingswijze__c</fullName>
    <defaultValue>IF($RecordType.DeveloperName = &quot;Particulier&quot; , &quot;Contant/Pin bij oplevering of vooraf via iDEAL.&quot;, &quot;Factuur&quot;)</defaultValue>
    <label>Betalingswijze</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Betalingswijze</valueSetName>
    </valueSet>
</CustomField>