force-app/main/default/objects/Lead/fields/Bundelkorting_Bedrag__c.field-meta.xml
<CustomField>
    <fullName>Bundelkorting_Bedrag__c</fullName>
    <label>Bundelkorting Bedrag</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>