force-app/main/default/objects/Lead/fields/Bundelkorting_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Bundelkorting_Percentage__c</fullName>
    <label>Bundelkorting Percentage</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>