force-app/main/default/objects/Lead/fields/cloudamp__Campaign_Cookie__c.field-meta.xml
<CustomField>
    <fullName>cloudamp__Campaign_Cookie__c</fullName>
    <description>Raw data from the Campaign Tracker that is captured when a tracked visitor submits the web-to-lead form.</description>
    <inlineHelpText>Raw data from the Campaign Tracker that is captured when a tracked visitor submits the web-to-lead form.</inlineHelpText>
    <label>Campaign Cookie</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>