force-app/main/default/objects/Lead/fields/cloudamp__data__c.field-meta.xml
<CustomField>
    <fullName>cloudamp__data__c</fullName>
    <description>This is the integration field where tracking data from the CloudAmp Campaign Tracker goes into newly created leads.</description>
    <inlineHelpText>This is the integration field where tracking data from the CloudAmp Campaign Tracker goes into newly created leads.</inlineHelpText>
    <label>data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>