force-app/main/default/objects/Lead/fields/cloudamp__GA_Campaign__c.field-meta.xml
<CustomField>
    <fullName>cloudamp__GA_Campaign__c</fullName>
    <description>utm_campaign variable from Google Analytics Campaign URLs: The individual campaign name, slogan, promo code, etc. for a product.</description>
    <inlineHelpText>utm_campaign variable from Google Analytics Campaign URLs: The individual campaign name, slogan, promo code, etc. for a product.</inlineHelpText>
    <label>First UTM Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>