force-app/main/default/objects/Lead/fields/cloudamp__GA_Medium__c.field-meta.xml
<CustomField>
    <fullName>cloudamp__GA_Medium__c</fullName>
    <description>utm_medium variable from Google Analytics Campaign URLs: The advertising or marketing medium, e.g.: cpc, banner, email newsletter.</description>
    <inlineHelpText>utm_medium variable from Google Analytics Campaign URLs: The advertising or marketing medium, e.g.: cpc, banner, email newsletter.</inlineHelpText>
    <label>First UTM Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>