force-app/main/default/objects/Lead/fields/cloudamp__GA_Term__c.field-meta.xml
<CustomField>
    <fullName>cloudamp__GA_Term__c</fullName>
    <description>utm_term variable from Google Analytics Campaign URLs: Identify paid search keywords. If you&apos;re manually tagging paid keyword campaigns, you should also use utm_term to specify the keyword</description>
    <inlineHelpText>utm_term variable from Google Analytics Campaign URLs: Identify paid search keywords. If you&apos;re manually tagging paid keyword campaigns, you should also use utm_term to specify the keyword</inlineHelpText>
    <label>First UTM Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>