force-app/main/default/objects/Lead/fields/cloudamp__GA_Tracked__c.field-meta.xml
<CustomField>
    <fullName>cloudamp__GA_Tracked__c</fullName>
    <formula>IF( cloudamp__GA_Tracker_Score__c  &gt; 0, &quot;Tracked&quot;, &quot;Not Tracked&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GA Tracked</label>
    <type>Text</type>
</CustomField>