force-app/main/default/objects/Lead/fields/cloudamp__GA_Tracker_Score__c.field-meta.xml
<CustomField>
    <fullName>cloudamp__GA_Tracker_Score__c</fullName>
    <description>A score of 0-5 that simply indicates how many of the Google Analytics Campaign parameters were captured from the URL the visitor clicked on.</description>
    <formula>IF( ISBLANK( cloudamp__GA_Campaign__c ) , 0, 1)  +  IF( ISBLANK( cloudamp__GA_Content__c ) , 0, 1)  +  IF( ISBLANK(  cloudamp__GA_Medium__c  ) , 0, 1)  +  IF( ISBLANK(  cloudamp__GA_Source__c  ) , 0, 1)  +  IF( ISBLANK(  cloudamp__GA_Term__c  ) , 0, 1)</formula>
    <inlineHelpText>A score of 0-5 that simply indicates how many of the Google Analytics Campaign parameters were captured from the URL the visitor clicked on.</inlineHelpText>
    <label>GA Tracker Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>