force-app/main/default/objects/Lead/fields/cloudamp__GAC_Campaign__c.field-meta.xml
<CustomField>
    <fullName>cloudamp__GAC_Campaign__c</fullName>
    <description>No longer in use: Campaign data from the Google Analytics Cookie</description>
    <inlineHelpText>No longer in use: Campaign data from the Google Analytics Cookie</inlineHelpText>
    <label>Not in use - GAC Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>