force-app/main/default/objects/Lead/fields/cloudamp__GAC_Source__c.field-meta.xml
<CustomField>
    <fullName>cloudamp__GAC_Source__c</fullName>
    <description>No longer in use: Source data from the Google Analytics Cookie</description>
    <inlineHelpText>No longer in use: Source data from the Google Analytics Cookie</inlineHelpText>
    <label>Not in use - GAC Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>