force-app/main/default/objects/Lead/fields/cloudamp__Initial_Source__c.field-meta.xml
<CustomField>
    <fullName>cloudamp__Initial_Source__c</fullName>
    <description>This field tracks the Lead initial referral source from the session history data.</description>
    <label>Initial Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>