force-app/main/default/objects/Lead/fields/cloudamp__Keyword__c.field-meta.xml
<CustomField>
    <fullName>cloudamp__Keyword__c</fullName>
    <description>The search term that sent a visitor to your web site prior to them submitting a web-to-lead form. &apos;Not Provided&apos; means the keyword cannot be determined, usually due to Google encrypting searches from logged in Google users.</description>
    <inlineHelpText>The search term that sent a visitor to your web site prior to them submitting a web-to-lead form. &apos;Not Provided&apos; means the keyword cannot be determined, usually due to Google encrypting searches from logged in Google users.</inlineHelpText>
    <label>First Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>