force-app/main/default/objects/Lead/fields/cloudamp__Last_GA_Content__c.field-meta.xml
<CustomField>
    <fullName>cloudamp__Last_GA_Content__c</fullName>
    <description>last utm_content variable from Google Analytics Campaign URLs: Used to differentiate similar content, or links within the same ad. For example, if you have two call-to-action links within the same email message, you can use utm_content and set different values for each so you can tell which version is more effective.</description>
    <inlineHelpText>last utm_content variable from Google Analytics Campaign URLs: Used to differentiate similar content, or links within the same ad.</inlineHelpText>
    <label>Last UTM Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>