force-app/main/default/objects/Lead/fields/cloudamp__Last_GA_Source__c.field-meta.xml
<CustomField>
    <fullName>cloudamp__Last_GA_Source__c</fullName>
    <description>last utm_source variable from Google Analytics Campaign URLs: Identify the advertiser, site, publication, etc. that is sending traffic to your property, e.g. google, citysearch, newsletter4, billboard.</description>
    <inlineHelpText>last utm_source variable from Google Analytics Campaign URLs: Identify the advertiser, site, publication, etc. that is sending traffic to your property, e.g. google, citysearch, newsletter4, billboard.</inlineHelpText>
    <label>Last UTM Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>