force-app/main/default/objects/Lead/fields/cloudamp__Last_gclid__c.field-meta.xml
<CustomField>
    <fullName>cloudamp__Last_gclid__c</fullName>
    <description>The Ad click ID from Google Adwords.</description>
    <inlineHelpText>The Ad click ID from Google Adwords.</inlineHelpText>
    <label>Last gclid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>