force-app/main/default/objects/Lead/fields/cloudamp__Last_Lead_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>cloudamp__Last_Lead_Source_Type__c</fullName>
    <description>Categorizes the type of source that sent a user to your web site. Campaign=utm tagged URL, Direct=Typed in, Organic=non-ad search, Referral=link from another site.</description>
    <inlineHelpText>Categorizes the type of source that sent a user to your web site. Campaign=utm tagged URL, Direct=Typed in, Organic=non-ad search, Referral=link from another site.</inlineHelpText>
    <label>Last Lead Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>