force-app/main/default/objects/Lead/fields/cloudamp__Last_Search_Engine__c.field-meta.xml
<CustomField>
    <fullName>cloudamp__Last_Search_Engine__c</fullName>
    <description>The search engine that a visitor used to find your site, prior to submitting the web-to-lead form.</description>
    <inlineHelpText>The search engine that a visitor used to find your site, prior to submitting the web-to-lead form.</inlineHelpText>
    <label>Last Search Engine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>