force-app/main/default/objects/Lead/fields/cloudamp__Noncampaign_Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>cloudamp__Noncampaign_Lead_Type__c</fullName>
    <formula>IF(cloudamp__GA_Medium__c = &quot;referral&quot;, &quot;Referral&quot;,  IF( cloudamp__GA_Campaign__c  = &quot;(direct)&quot;, &quot;Direct&quot;,  IF(cloudamp__GA_Medium__c = &quot;organic&quot;, &quot;Organic&quot;, IF( cloudamp__Paid_Search__c = true, &quot;Paid Search&quot;, null))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non-Campaign Lead Type</label>
    <type>Text</type>
</CustomField>