force-app/main/default/objects/Lead/fields/cloudamp__Paid_Search__c.field-meta.xml
<CustomField>
    <fullName>cloudamp__Paid_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked, it means that the click that sent a visitor to your web site prior to them submitting a web-to-lead form was on an advertisement (Adwords, Microsoft AdCenter, etc.). Unchecked means they clicked on an organic search result, or the visit was not a search.</description>
    <inlineHelpText>If this is checked, it means that the click that sent a visitor to your web site prior to them submitting a web-to-lead form was on an advertisement (Adwords, Microsoft AdCenter, etc.). Unchecked means it was an organic search result or it was not search.</inlineHelpText>
    <label>First Paid Search</label>
    <type>Checkbox</type>
</CustomField>