force-app/main/default/objects/Lead/fields/cloudamp__Referrer__c.field-meta.xml
<CustomField>
    <fullName>cloudamp__Referrer__c</fullName>
    <description>The Referring URL that a visitor came from to arrive on your web site, prior to submitting a web-to-lead form.</description>
    <inlineHelpText>The Referring URL that a visitor came from to arrive on your web site, prior to submitting a web-to-lead form.</inlineHelpText>
    <label>First Referrer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>