force-app/main/default/objects/Lead/fields/Datum_laatste_activiteit__c.field-meta.xml
<CustomField>
    <fullName>Datum_laatste_activiteit__c</fullName>
    <formula>LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Datum laatste activiteit</label>
    <type>Date</type>
</CustomField>