force-app/main/default/objects/Lead/fields/Datum_tijd_Offerte_Verstuurd__c.field-meta.xml
<CustomField>
    <fullName>Datum_tijd_Offerte_Verstuurd__c</fullName>
    <label>Datum/tijd Offerte Verstuurd</label>
    <type>DateTime</type>
</CustomField>