force-app/main/default/objects/Lead/fields/Days_to_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Conversion__c</fullName>
    <formula>IF(
    ISBLANK(ConvertedDate),
    NULL,
    ConvertedDate - DATEVALUE(CreatedDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Conversion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>