force-app/main/default/objects/Lead/fields/Diensten_Tekst_Template__c.field-meta.xml
<CustomField>
    <fullName>Diensten_Tekst_Template__c</fullName>
    <description>Zet het multipicklistfield &quot;Diensten&quot; om in tekst om te verwerken in een e-mail template.</description>
    <label>Diensten Tekst Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>