force-app/main/default/objects/Lead/fields/Engels__c.field-meta.xml
<CustomField>
    <fullName>Engels__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engels?</label>
    <type>Checkbox</type>
</CustomField>