force-app/main/default/objects/Lead/fields/Expected_products__c.field-meta.xml
<CustomField>
    <fullName>Expected_products__c</fullName>
    <label>Expected products</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>