force-app/main/default/objects/Lead/fields/External_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Lead_Id__c</fullName>
    <label>External Lead Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>