force-app/main/default/objects/Lead/fields/Foto_links__c.field-meta.xml
<CustomField>
    <fullName>Foto_links__c</fullName>
    <label>Foto links</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>