force-app/main/default/objects/Lead/fields/Herberekening_Minimumtoeslag__c.field-meta.xml
<CustomField>
    <fullName>Herberekening_Minimumtoeslag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Herberekening Minimumtoeslag</label>
    <type>Checkbox</type>
</CustomField>