force-app/main/default/objects/Lead/fields/Incoming_Call__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incoming Call</label>
    <referenceTo>Incoming_Call__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>