force-app/main/default/objects/Lead/fields/Leadnummer__c.field-meta.xml
<CustomField>
    <fullName>Leadnummer__c</fullName>
    <displayFormat>L-{00000}</displayFormat>
    <label>Leadnummer</label>
    <type>AutoNumber</type>
</CustomField>