force-app/main/default/objects/Lead/fields/Marketing_OptIn__c.field-meta.xml
<CustomField>
    <fullName>Marketing_OptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing OptIn</label>
    <type>Checkbox</type>
</CustomField>