force-app/main/default/objects/Lead/fields/Merge_Field_Object__c.field-meta.xml
<CustomField>
    <fullName>Merge_Field_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merge Field Object</label>
    <referenceTo>Merge_Field_Object__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads_del</relationshipName>
    <type>Lookup</type>
</CustomField>