force-app/main/default/objects/Lead/fields/Meubelreiniging_status__c.field-meta.xml
<CustomField>
    <fullName>Meubelreiniging_status__c</fullName>
    <label>Beoordeling status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Beoordeling_status</valueSetName>
    </valueSet>
</CustomField>