force-app/main/default/objects/Lead/fields/Niet_ge_nteresseerd_Opmerkingen__c.field-meta.xml
<CustomField>
    <fullName>Niet_ge_nteresseerd_Opmerkingen__c</fullName>
    <label>Niet geïnteresseerd - Opmerkingen</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>