force-app/main/default/objects/Lead/fields/Nieuwsbrief__c.field-meta.xml
<CustomField>
    <fullName>Nieuwsbrief__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nieuwsbrief?</label>
    <type>Checkbox</type>
</CustomField>