force-app/main/default/objects/Lead/fields/Offer_HMAC__c.field-meta.xml
<CustomField>
    <fullName>Offer_HMAC__c</fullName>
    <label>Offer HMAC</label>
    <length>128</length>
    <type>Text</type>
</CustomField>