force-app/main/default/objects/Lead/fields/Offer_Public_URL__c.field-meta.xml
<CustomField>
    <fullName>Offer_Public_URL__c</fullName>
    <label>Offer Public URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>