force-app/main/default/objects/Lead/fields/Offer_Signature__c.field-meta.xml
<CustomField>
    <fullName>Offer_Signature__c</fullName>
    <label>Offer Signature</label>
    <length>128</length>
    <type>Text</type>
</CustomField>