force-app/main/default/objects/Lead/fields/Offerte_Bellen_Status__c.field-meta.xml
<CustomField>
    <fullName>Offerte_Bellen_Status__c</fullName>
    <label>Offerte - Bellen Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Offerte_Bellen_Status</valueSetName>
    </valueSet>
</CustomField>