force-app/main/default/objects/Lead/fields/Offerte_Bevestigen_URL__c.field-meta.xml
<CustomField>
    <fullName>Offerte_Bevestigen_URL__c</fullName>
    <formula>IF( Uniek_Segment__c = &quot;Wasserij&quot;, &quot;https://kleda.nl/client/offerte-bevestigen/&quot; &amp; &quot;?prijspakket1=&quot; &amp; SUBSTITUTE(TEXT(Totale_Prijs__c), &quot;.&quot;, &quot;,&quot;) &amp; &quot;&amp;prijspakket2=&quot; &amp; SUBSTITUTE(TEXT(Totale_Prijs__c), &quot;.&quot;, &quot;,&quot;) &amp; &quot;&amp;prijspakket3=&quot; &amp; SUBSTITUTE(TEXT(Totale_Prijs__c), &quot;.&quot;, &quot;,&quot;) &amp; &quot;&amp;offertenummer=&quot; &amp; Leadnummer__c, IF( Uniek_Segment__c = &quot;Tapijt- en Meubelreiniging&quot;, &quot;https://staging.cincocleaning.com/client/offerte-bevestigen/&quot; &amp; &quot;?prijspakket1=&quot; &amp; SUBSTITUTE(TEXT(Totale_Prijs__c), &quot;.&quot;, &quot;,&quot;) &amp; &quot;&amp;prijspakket2=&quot; &amp; SUBSTITUTE(TEXT(Totale_Prijs__c), &quot;.&quot;, &quot;,&quot;) &amp; &quot;&amp;prijspakket3=&quot; &amp; SUBSTITUTE(TEXT(Totale_Prijs__c), &quot;.&quot;, &quot;,&quot;) &amp; &quot;&amp;offertenummer=&quot; &amp; Leadnummer__c, &quot;&quot; ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offerte Bevestigen URL</label>
    <type>Text</type>
</CustomField>