force-app/main/default/objects/Lead/fields/Offerte_geldigheidsduur_dagen__c.field-meta.xml
<CustomField>
    <fullName>Offerte_geldigheidsduur_dagen__c</fullName>
    <defaultValue>&quot;14&quot;</defaultValue>
    <label>Offerte - geldigheidsduur dagen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>