force-app/main/default/objects/Lead/fields/Offerte_geldigheidsduur_dagen_Nummer__c.field-meta.xml
<CustomField>
    <fullName>Offerte_geldigheidsduur_dagen_Nummer__c</fullName>
    <formula>CASE(Offerte_geldigheidsduur_dagen__c, 
&quot;7&quot;, 7, 
&quot;14&quot;, 14, 
&quot;30&quot;, 30, 
&quot;60&quot;, 60, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offerte - geldigheidsduur dagen Nummer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>