force-app/main/default/objects/Lead/fields/Offerte_vervaldatum__c.field-meta.xml
<CustomField>
    <fullName>Offerte_vervaldatum__c</fullName>
    <formula>Datum_tijd_Offerte_Verstuurd__c + Offerte_geldigheidsduur_dagen_Nummer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offerte - vervaldatum</label>
    <type>Date</type>
</CustomField>