force-app/main/default/objects/Lead/fields/Ophaaladres_Toevoeging__c.field-meta.xml
<CustomField>
    <fullName>Ophaaladres_Toevoeging__c</fullName>
    <label>Ophaaladres Toevoeging</label>
    <length>10</length>
    <type>Text</type>
</CustomField>