force-app/main/default/objects/Lead/fields/Ophaalplaats__c.field-meta.xml
<CustomField>
    <fullName>Ophaalplaats__c</fullName>
    <label>Ophaalplaats</label>
    <length>255</length>
    <type>Text</type>
</CustomField>